<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Activities.RegisterUserActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"

        android:textSize="22sp"/>

    <EditText
        android:id="@+id/sendUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sendPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Husk mig"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="Login"
        android:textColor="@android:color/background_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Glemt dit password?"
        android:id="@+id/goToResetPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/btnGoToRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Opret ny bruger"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        />



</LinearLayout>
