<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainActivityLayout"
    tools:context=".Activities.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/mainDataTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_green_light"
        android:onClick="StartSendLoop"
        android:text="Start" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="stopSendLoop"
        android:text="Stop" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/mapbox_blue"
        android:onClick="GoToShowAllData"
        android:text="Go To Show All" />

    <TextView
        android:id="@+id/mainMessageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>