<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



    <item
        android:id="@+id/actionBarUserSettings"
        android:icon="@mipmap/user"
        android:orderInCategory="1"
        android:title="Create order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionBarSettings"
        android:icon="@mipmap/settings"
        android:orderInCategory="1"
        android:title="Create order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionBarLogOut"
        android:icon="@mipmap/logout"
        android:orderInCategory="1"
        android:title="Create order"
        app:showAsAction="ifRoom" />

</menu>